[change] IconWrapper propName 변경

--- a/stories/Icon/AnimationIcon.stories.mdx
+++ b/stories/Icon/AnimationIcon.stories.mdx
@@ -51,8 +51,8 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Medium</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component-name="AnimationIcon" name="IconThreeDotMediumFillAnimation" :rotate="-90" />
-                            <IconWrapper component-name="AnimationIcon" name="IconCheckRoundMediumLineAnimation" :rotate="90" />
+                            <IconWrapper component="AnimationIcon" name="IconThreeDotMediumFillAnimation" :rotate="-90" />
+                            <IconWrapper component="AnimationIcon" name="IconCheckRoundMediumLineAnimation" :rotate="90" />
                         </div>
                     </div>
                 </div>
