--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -66,141 +66,141 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Small</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component-name="Icon" name="IconCheckSmallLine"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconPlusSmallLine" color="black"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconArrowSmallLine"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconThreeDotSmallFill"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconTextArrowSmallFill"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconOfficialSmallFill"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconExclamationSmallFill"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconProfileSmallFill"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconCheckSmallFill"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconCloseSmallLine"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconSettingSmallFill"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconQuestionMarkSmallFill"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconFileSmallLine"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconStarSmallFill" color="gray400"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconMegaphoneSmallLine"></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconLinkSmallLine"></IconWrapper>
+                            <IconWrapper component="Icon" name="IconCheckSmallLine" />
+                            <IconWrapper component="Icon" name="IconPlusSmallLine" color="black" />
+                            <IconWrapper component="Icon" name="IconArrowSmallLine" />
+                            <IconWrapper component="Icon" name="IconThreeDotSmallFill" />
+                            <IconWrapper component="Icon" name="IconTextArrowSmallFill" />
+                            <IconWrapper component="Icon" name="IconOfficialSmallFill" />
+                            <IconWrapper component="Icon" name="IconExclamationSmallFill" />
+                            <IconWrapper component="Icon" name="IconProfileSmallFill" />
+                            <IconWrapper component="Icon" name="IconCheckSmallFill" />
+                            <IconWrapper component="Icon" name="IconCloseSmallLine" />
+                            <IconWrapper component="Icon" name="IconSettingSmallFill" />
+                            <IconWrapper component="Icon" name="IconQuestionMarkSmallFill" />
+                            <IconWrapper component="Icon" name="IconFileSmallLine" />
+                            <IconWrapper component="Icon" name="IconStarSmallFill" color="gray400" />
+                            <IconWrapper component="Icon" name="IconMegaphoneSmallLine" />
+                            <IconWrapper component="Icon" name="IconLinkSmallLine" />
                         </div>
                     </div>
                     <!--medium-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Medium</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component-name="Icon" name=IconCheckMediumFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconQuestionMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconLikeMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconLikeMediumFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCommentMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCheckMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconPlusMediumLine color="black"></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconArrowMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconTextArrowMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconFileMediumLineLight></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconTrashMediumLineLight></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconDownloadMediumLineLight></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconThreeDotMediumFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconHourglassMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCloseMediumFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconInfoMediumFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconInfoMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconExclamationMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconQuestionMarkMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCloseMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCheckRoundMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconFilterMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconLocationMediumFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconMentoringMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconResumeMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconJobWikiMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconAnalyticsMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconInterviewMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconEssayMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconVodMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconEduMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCouponMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconRevertMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconDownloadMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconExportMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconClockMediumFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconClockMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconSupportMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconStarMediumFill color="gray400"></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconMegaphoneMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconMinusMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconDiscountMediumLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name="IconLinkMediumLine"></IconWrapper>
+                            <IconWrapper component="Icon" name=IconCheckMediumFill />
+                            <IconWrapper component="Icon" name=IconQuestionMediumLine />
+                            <IconWrapper component="Icon" name=IconLikeMediumLine />
+                            <IconWrapper component="Icon" name=IconLikeMediumFill />
+                            <IconWrapper component="Icon" name=IconCommentMediumLine />
+                            <IconWrapper component="Icon" name=IconCheckMediumLine />
+                            <IconWrapper component="Icon" name=IconPlusMediumLine color="black" />
+                            <IconWrapper component="Icon" name=IconArrowMediumLine />
+                            <IconWrapper component="Icon" name=IconTextArrowMediumLine />
+                            <IconWrapper component="Icon" name=IconFileMediumLineLight />
+                            <IconWrapper component="Icon" name=IconTrashMediumLineLight />
+                            <IconWrapper component="Icon" name=IconDownloadMediumLineLight />
+                            <IconWrapper component="Icon" name=IconThreeDotMediumFill />
+                            <IconWrapper component="Icon" name=IconHourglassMediumLine />
+                            <IconWrapper component="Icon" name=IconCloseMediumFill />
+                            <IconWrapper component="Icon" name=IconInfoMediumFill />
+                            <IconWrapper component="Icon" name=IconInfoMediumLine />
+                            <IconWrapper component="Icon" name=IconExclamationMediumLine />
+                            <IconWrapper component="Icon" name=IconQuestionMarkMediumLine />
+                            <IconWrapper component="Icon" name=IconCloseMediumLine />
+                            <IconWrapper component="Icon" name=IconCheckRoundMediumLine />
+                            <IconWrapper component="Icon" name=IconFilterMediumLine />
+                            <IconWrapper component="Icon" name=IconLocationMediumFill />
+                            <IconWrapper component="Icon" name=IconMentoringMediumLine />
+                            <IconWrapper component="Icon" name=IconResumeMediumLine />
+                            <IconWrapper component="Icon" name=IconJobWikiMediumLine />
+                            <IconWrapper component="Icon" name=IconAnalyticsMediumLine />
+                            <IconWrapper component="Icon" name=IconInterviewMediumLine />
+                            <IconWrapper component="Icon" name=IconEssayMediumLine />
+                            <IconWrapper component="Icon" name=IconVodMediumLine />
+                            <IconWrapper component="Icon" name=IconEduMediumLine />
+                            <IconWrapper component="Icon" name=IconCouponMediumLine />
+                            <IconWrapper component="Icon" name=IconRevertMediumLine />
+                            <IconWrapper component="Icon" name=IconDownloadMediumLine />
+                            <IconWrapper component="Icon" name=IconExportMediumLine />
+                            <IconWrapper component="Icon" name=IconClockMediumFill />
+                            <IconWrapper component="Icon" name=IconClockMediumLine />
+                            <IconWrapper component="Icon" name=IconSupportMediumLine />
+                            <IconWrapper component="Icon" name=IconStarMediumFill color="gray400" />
+                            <IconWrapper component="Icon" name=IconMegaphoneMediumLine />
+                            <IconWrapper component="Icon" name=IconMinusMediumLine />
+                            <IconWrapper component="Icon" name=IconDiscountMediumLine />
+                            <IconWrapper component="Icon" name="IconLinkMediumLine" />
                         </div>
                     </div>
                     <!--large-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Large</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component-name="Icon" name=IconProfileLargeFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconSelectedLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconReplyLargeLine color="black"></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconSendLargeFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconPlusLargeLine color="black"></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconProfileLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconAlarmLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconSearchLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconBackwardLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconArrowLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconTextArrowLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCloseLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconExclamationLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconFilterLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCheckLargeFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconSecurityLargeFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconDownloadLargeLine color="black"></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCheckLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconKeylineLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconMentoringLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconVodLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconAnswerLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconEduLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconAnalyticsLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconInterviewLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconEssayLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconResumeLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconQuestionLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconVideoLargeFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconStarLargeFill></IconWrapper>
+                            <IconWrapper component="Icon" name=IconProfileLargeFill />
+                            <IconWrapper component="Icon" name=IconSelectedLargeLine />
+                            <IconWrapper component="Icon" name=IconReplyLargeLine color="black" />
+                            <IconWrapper component="Icon" name=IconSendLargeFill />
+                            <IconWrapper component="Icon" name=IconPlusLargeLine color="black" />
+                            <IconWrapper component="Icon" name=IconProfileLargeLine />
+                            <IconWrapper component="Icon" name=IconAlarmLargeLine />
+                            <IconWrapper component="Icon" name=IconSearchLargeLine />
+                            <IconWrapper component="Icon" name=IconBackwardLargeLine />
+                            <IconWrapper component="Icon" name=IconArrowLargeLine />
+                            <IconWrapper component="Icon" name=IconTextArrowLargeLine />
+                            <IconWrapper component="Icon" name=IconCloseLargeLine />
+                            <IconWrapper component="Icon" name=IconExclamationLargeLine />
+                            <IconWrapper component="Icon" name=IconFilterLargeLine />
+                            <IconWrapper component="Icon" name=IconCheckLargeFill />
+                            <IconWrapper component="Icon" name=IconSecurityLargeFill />
+                            <IconWrapper component="Icon" name=IconDownloadLargeLine color="black" />
+                            <IconWrapper component="Icon" name=IconCheckLargeLine />
+                            <IconWrapper component="Icon" name=IconKeylineLargeLine />
+                            <IconWrapper component="Icon" name=IconMentoringLargeLine />
+                            <IconWrapper component="Icon" name=IconVodLargeLine />
+                            <IconWrapper component="Icon" name=IconAnswerLargeLine />
+                            <IconWrapper component="Icon" name=IconEduLargeLine />
+                            <IconWrapper component="Icon" name=IconAnalyticsLargeLine />
+                            <IconWrapper component="Icon" name=IconInterviewLargeLine />
+                            <IconWrapper component="Icon" name=IconEssayLargeLine />
+                            <IconWrapper component="Icon" name=IconResumeLargeLine />
+                            <IconWrapper component="Icon" name=IconQuestionLargeLine />
+                            <IconWrapper component="Icon" name=IconVideoLargeFill />
+                            <IconWrapper component="Icon" name=IconStarLargeFill />
                         </div>
                     </div>
                     <!--x-large-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component-name="Icon" name=IconProfileXLargeFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconArrowXLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCloseXLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconQuestionXLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconAdoptXLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCreditPlusXLargeLine color="black"></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCreditMinusXLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconLikeXLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCelebrateXLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconAnswerXLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconMegaphoneXLargeLine></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconCheckXLargeFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconUnCheckedXLargeFill></IconWrapper>
-                            <IconWrapper component-name="Icon" name=IconStarXLargeFill></IconWrapper>
+                            <IconWrapper component="Icon" name=IconProfileXLargeFill />
+                            <IconWrapper component="Icon" name=IconArrowXLargeLine />
+                            <IconWrapper component="Icon" name=IconCloseXLargeLine />
+                            <IconWrapper component="Icon" name=IconQuestionXLargeLine />
+                            <IconWrapper component="Icon" name=IconAdoptXLargeLine />
+                            <IconWrapper component="Icon" name=IconCreditPlusXLargeLine color="black" />
+                            <IconWrapper component="Icon" name=IconCreditMinusXLargeLine />
+                            <IconWrapper component="Icon" name=IconLikeXLargeLine />
+                            <IconWrapper component="Icon" name=IconCelebrateXLargeLine />
+                            <IconWrapper component="Icon" name=IconAnswerXLargeLine />
+                            <IconWrapper component="Icon" name=IconMegaphoneXLargeLine />
+                            <IconWrapper component="Icon" name=IconCheckXLargeFill />
+                            <IconWrapper component="Icon" name=IconUnCheckedXLargeFill />
+                            <IconWrapper component="Icon" name=IconStarXLargeFill />
                         </div>
                     </div>
                     <!--2x-large-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">2XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component-name="Icon" name=IconProfile2XLargeFill></IconWrapper>
+                            <IconWrapper component="Icon" name=IconProfile2XLargeFill />
                         </div>
                     </div>
                     <!--4x-large-->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">4XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component-name="Icon" name=IconStar4XLargeFill color="gray400"></IconWrapper>
+                            <IconWrapper component="Icon" name=IconStar4XLargeFill color="gray400" />
                         </div>
                     </div>
                 </div>
