--- a/stories/Icon/EtcIcon.stories.mdx
+++ b/stories/Icon/EtcIcon.stories.mdx
@@ -66,14 +66,14 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Small</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component-name="EtcIcon" name="IconDropdownSmallFillEtc" />
+                            <IconWrapper component="EtcIcon" name="IconDropdownSmallFillEtc" />
                         </div>
                     </div>
                     <!-- medium -->
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Medium</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component-name="EtcIcon" name="IconDropdownMediumLineEtc" />
+                            <IconWrapper component="EtcIcon" name="IconDropdownMediumLineEtc" />
                         </div>
                     </div>
                 </div>
