[add] 피드백 반영

--- a/stories/DataEntry/RadioButton.stories.mdx
+++ b/stories/DataEntry/RadioButton.stories.mdx
@@ -67,8 +67,8 @@ export const Default = (args, { argTypes }) => ({
             :size="size"
             :name="name"
             :disabled="disabled"
-            :fontColor="fontColor"
-            :radioColor="radioColor"
+            :font-color="fontColor"
+            :radio-color="radioColor"
             >
         {{label}}
         </RadioButton>`,
